tests/errors/init_state/partial_init/move_of_field_then_read_that_field.sim

        struct P { x: i64 y: i64 }
        fn f(p: P) {
          a: i64;
          b: i64;
          entry:
            a = move p.x;
            b = copy p.x;
            return
        }
        