tests/errors/init_state/partial_init/move_of_field_then_read_that_field.err.expected
error: at 8:13: [INIT-UseAfterMove] In function 'f', block 'entry': variable 'p' is used after move
   |
 8 |             b = copy p.x;
   |             ^^^^^^^^^^^^
